<resources>
  <string name="nicownng_system_dictionary_japanese">/data/data/net.gorry.android.input.nicownng/lib/libWnnJpnDic.so</string>
  <string name="nicownng_writable_dictionary_japanese">/data/data/net.gorry.android.input.nicownng/writableJAJP.dic</string>
  <string name="nicownng_system_dictionary_english">/data/data/net.gorry.android.input.nicownng/lib/libWnnEngDic.so</string>
  <string name="preference_key_setting_menu">Software Keyboard</string>
  <string name="preference_key_sound_title">Sound on Key Press </string>
  <string name="preference_key_sound_summary">Enable key click sound. </string>
  <string name="preference_key_sound_vol_title">Key Sound Volume</string>
  <string name="preference_key_sound_vol_summary">Volume of key click sound. </string>
  <string name="preference_key_vibration_title">Vibrate on Key Press </string>
  <string name="preference_key_vibration_summary">Enable key click vibration. </string>
  <string name="preference_preview_title">Key Preview </string>
  <string name="preference_preview_summary">Enable key preview. </string>
  <string name="preference_keyboard_skin_title">Keyboard Image</string>
  <string name="preference_keyboard_skin_summary">Change keyboard image.</string>
  <string name="preference_conversion_menu">Input/Conversion</string>
  <string name="preference_prediction_afterenter_title">Prediction after Conversion</string>
  <string name="preference_prediction_afterenter_summary">Display next predicted word based on last selected conversion Japanese word</string>
  <string name="preference_prediction_mode2_title">Word Prediction</string>
  <string name="preference_prediction_mode2_summary">Select predicted mode.</string>
  <string name="preference_correct_spell_title">Typing Error Correction</string>
  <string name="preference_correct_spell_summary">Display predicted words for correcting typing error in English.</string>
  <string name="preference_input_learning_title">Input Word Learning</string>
  <string name="preference_input_learning_summary">Learn input words.</string>
  <string name="preference_aboutime_menu"> About IME </string>
  <string name="preference_dictionary_menu"> Dictionary </string>
  <string name="preference_dictionary_menu_ja"> Japanese User Dictionary </string>
  <string name="preference_dictionary_menu_en"> English User Dictionary </string>
  <string name="preference_user_dictionary_edit_words_summary_ja">List/add/edit/delete words in Japanese user dictionary.</string>
  <string name="preference_user_dictionary_edit_words_summary_en">List/add/edit/delete words in English user dictionary.</string>
  <string name="preference_user_dictionary_clear_learning_title">Clear Learning Dictionary</string>
  <string name="preference_user_dictionary_clear_learning_summary">Remove all words from learning dictionary.</string>
	<string name="preference_config_menu">Backup/Restore</string>
	<string name="preference_config_backup_title">Export Configuration</string>
	<string name="preference_config_backup_summary">Write All Settings to External Folder</string>
	<string name="dialog_config_backup_message">Write all settings to File.\nPlease specify destination in the next dialog.\nIf you haven\'t created destination yet, we recommend creating "nicoWnnG" folder at the root folder and specifying that.</string>
	<string name="preference_config_restore_title">Import Configuration</string>
	<string name="preference_config_restore_summary">Restore All Settings from External Folder</string>
	<string name="dialog_config_restore_message">Restore all settings from File.\nPlease specify destination in the next dialog.</string>
	<string name="preference_keycode_test_title">Key Code Test</string>
	<string name="preference_keycode_test_summary">Show the test screen of Hardware Keyboard</string>
	<string name="dialog_keycode_test_message">Push Hardware-Key to show Information</string>
	<string name="preference_input_mode_start_title">Default Input Mode</string>
	<string name="preference_input_mode_start_summary">Specify Input Mode when showing Keyboard</string>
	<string name="preference_input_mode_next_title">Input Mode Switching Order</string>
	<string name="preference_input_mode_next_summary">Specify the Order of switching Input Mode when you tap the [あＡ１] key</string>
	<string name="nicownng_help_title">Help</string>
	<string name="nicownng_help_summary">Show Online Help.</string>
	<string name="preference_emoji_type_title">Emoji Input Style</string>
	<string name="preference_emoji_type_summary">Select Input Style of Emoji. Suitable style for Emoji Input depends on the model. Several models can not input Emoji.</string>
  <string name="dialog_button_ok">OK</string>
  <string name="dialog_button_cancel">Cancel</string>
  <string name="dialog_button_close">Close</string>
  <string name="dialog_button_clearlog">Clear Log</string>
  <string name="dialog_button_copylog">Copy Log</string>
  <string name="dialog_clear_learning_dictionary_message">Clear learning dictionary?</string>
  <string name="preference_nicownng_menu">Detailed Keyboard settings</string>
  <string name="preference_nicownng_menu_summary_ja_portrait">Setting in Portrait mode</string>
  <string name="preference_nicownng_different_pl_title">Separate setting in Portrait and Landscape</string>
  <string name="preference_nicownng_different_pl_summary">Using a different setting with Portrait and Landscape</string>
  <string name="preference_nicownng_change_onhardkey_title">Change Setting by Connecting Hardware Keyboard</string>
  <string name="preference_nicownng_change_onhardkey_summary">You can enable the following settings</string>
  <string name="preference_nicownng_change_kana_12key">Input Kana by 12-keys</string>
  <string name="preference_nicownng_change_kana_12key_summary_ja">Set default mapping to 12-keys in Kana-mode</string>
  <string name="preference_nicownng_change_alphanum_12key">Input Alphabet by 12-keys</string>
  <string name="preference_nicownng_change_alphanum_12key_summary_ja">Set default mapping to 12-keys in Alphabet-mode</string>
  <string name="preference_nicownng_change_num_12key">Input Number by 12-keys</string>
  <string name="preference_nicownng_change_num_12key_summary_ja">Set default mapping to 12-keys in Number-mode</string>
  <string name="preference_nicownng_change_noalpha_qwerty">No Alphabet mode</string>
  <string name="preference_nicownng_change_noalpha_summary_ja">Skip Alphabet-mode</string>
  <string name="preference_nicownng_change_nonumber_qwerty">No Number mode</string>
  <string name="preference_nicownng_change_nonumber_summary_ja">Skip Number-mode</string>
  <string name="preference_nicownng_import_usersymbol_title">Import [@!?]-Key Definition</string>
  <string name="preference_nicownng_import_usersymbol_summary">Import User Symbols at Typing [@!?]-Key</string>
    <string name="dialog_nicownng_import_usersymbol_message">Import User Symbols from File. Please specify destination in the next dialog.</string>
  <string name="preference_nicownng_export_usersymbol_title">Export [@!?]-Key Definition</string>
  <string name="preference_nicownng_export_usersymbol_summary">Export User Symbols at Typing [@!?]-Key</string>
    <string name="dialog_nicownng_export_usersymbol_message">Export User Symbols from File:\nPlease specify destination in the next dialog.\nIf you haven\'t created destination yet, we recommend creating "nicoWnnG" folder at the root folder and specifying that.</string>
  <string name="preference_nicownng_initialize_usersymbol_title">Initialize [@!?]-Key Definition</string>
  <string name="preference_nicownng_initialize_usersymbol_summary">Initialize User Symbols at Typing [@!?]-Key</string>
    <string name="dialog_nicownng_initialize_usersymbol_message">Initialize User Symbols at Typing [@!?]-Key.</string>
  <string name="preference_nicownng_fullscreen">Fullscreen</string>
  <string name="preference_nicownng_fullscreen_summary_ja">The soft keyboard occupy the full screen</string>
    <string name="preference_key_userkeysound_title">Use Import key sound</string>
    <string name="preference_key_userkeysound_summary">Check it if you want to use key click sound that importing from file.</string>
    <string name="preference_nicownng_import_userkeysound_title">Import Key Sound</string>
    <string name="preference_nicownng_import_userkeysound_summary">Import OGG file for key click sound.</string>
    <string name="dialog_nicownng_import_userkeysound_message">Import OGG file for key click sound.\nPlease specify a file in the next dialog.</string>
  <string name="nicownng_japanese_copyright">Ver.1.3.1\nOMRON SOFTWARE Co., Ltd.\nNicoWnn Ver.1.3.0\nNicoWnnG Ver.2025.0915.22</string>
  <string name="nicownng_japanese">nicoWnnG IME</string>
  <string name="key_kana_full_hiragana_middot">・</string>
  <string name="key_kana_full_hiragana_kagi_kakko_left">「</string>
  <string name="key_kana_full_hiragana_kagi_kakko_right">」</string>
  <string name="key_kana_full_katakana_a">ア</string>
  <string name="key_kana_full_katakana_i">イ</string>
  <string name="key_kana_full_katakana_u">ウ</string>
  <string name="key_kana_full_katakana_e">エ</string>
  <string name="key_kana_full_katakana_o">オ</string>
  <string name="key_kana_full_katakana_ka">カ</string>
  <string name="key_kana_full_katakana_ki">キ</string>
  <string name="key_kana_full_katakana_ku">ク</string>
  <string name="key_kana_full_katakana_ke">ケ</string>
  <string name="key_kana_full_katakana_ko">コ</string>
  <string name="key_kana_full_katakana_sa">サ</string>
  <string name="key_kana_full_katakana_si">シ</string>
  <string name="key_kana_full_katakana_su">ス</string>
  <string name="key_kana_full_katakana_se">セ</string>
  <string name="key_kana_full_katakana_so">ソ</string>
  <string name="key_kana_full_katakana_ta">タ</string>
  <string name="key_kana_full_katakana_ti">チ</string>
  <string name="key_kana_full_katakana_tu">ツ</string>
  <string name="key_kana_full_katakana_te">テ</string>
  <string name="key_kana_full_katakana_to">ト</string>
  <string name="key_kana_full_katakana_na">ナ</string>
  <string name="key_kana_full_katakana_ni">ニ</string>
  <string name="key_kana_full_katakana_nu">ヌ</string>
  <string name="key_kana_full_katakana_ne">ネ</string>
  <string name="key_kana_full_katakana_no">ノ</string>
  <string name="key_kana_full_katakana_ha">ハ</string>
  <string name="key_kana_full_katakana_hi">ヒ</string>
  <string name="key_kana_full_katakana_hu">フ</string>
  <string name="key_kana_full_katakana_he">ヘ</string>
  <string name="key_kana_full_katakana_ho">ホ</string>
  <string name="key_kana_full_katakana_ma">マ</string>
  <string name="key_kana_full_katakana_mi">ミ</string>
  <string name="key_kana_full_katakana_mu">ム</string>
  <string name="key_kana_full_katakana_me">メ</string>
  <string name="key_kana_full_katakana_mo">モ</string>
  <string name="key_kana_full_katakana_ya">ヤ</string>
  <string name="key_kana_full_katakana_yu">ユ</string>
  <string name="key_kana_full_katakana_yo">ヨ</string>
  <string name="key_kana_full_katakana_ra">ラ</string>
  <string name="key_kana_full_katakana_ri">リ</string>
  <string name="key_kana_full_katakana_ru">ル</string>
  <string name="key_kana_full_katakana_re">レ</string>
  <string name="key_kana_full_katakana_ro">ロ</string>
  <string name="key_kana_full_katakana_wa">ワ</string>
  <string name="key_kana_full_katakana_wo">ヲ</string>
  <string name="key_kana_full_katakana_n">ン</string>
  <string name="key_kana_full_katakana_dakuten">゛</string>
  <string name="key_kana_full_katakana_handakuten">゜</string>
  <string name="key_kana_full_katakana_tyouon">ー</string>
  <string name="key_kana_full_katakana_touten">、</string>
  <string name="key_kana_full_katakana_kuten">。</string>
	<string name="preference_nicownng_edit_usersymbol_title">Edit [@!?]-Key Definition</string>
	<string name="preference_nicownng_edit_usersymbol_summary">Edit User Symbols at Typing [@!?]-Key</string>
</resources>