<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2008,2009  OMRON SOFTWARE Co., Ltd.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
  -->
<PreferenceScreen
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android"
	>
	<PreferenceCategory
		app:title="@string/preference_nicownng_menu"
		>
		<PreferenceScreen
			app:key="nicownng_menu"
			app:title="@string/preference_nicownng_menu"
			app:summary="@string/preference_nicownng_menu_summary_ja_portrait"
			app:fragment="net.gorry.android.input.nicownng.ActivityNicoWnnGSettingPreferenceKeyboard"
			/>
		<CheckBoxPreference
			app:key="different_pl"
			app:title="@string/preference_nicownng_different_pl_title"
			app:summary="@string/preference_nicownng_different_pl_summary"
			app:defaultValue="true"
			/>
	</PreferenceCategory>
	<PreferenceCategory
		app:title="@string/preference_key_setting_menu"
		>
		<CheckBoxPreference
			app:key="key_sound"
			app:title="@string/preference_key_sound_title"
			app:summary="@string/preference_key_sound_summary"
			/>
		<ListPreference
			app:key="key_sound_vol"
			app:title="@string/preference_key_sound_vol_title"
			app:summary="@string/preference_key_sound_vol_summary"
			app:entries="@array/key_sound_vol_entries"
			app:entryValues="@array/key_sound_vol_values"
			app:defaultValue="1"
			/>
		<CheckBoxPreference
			app:key="key_userkeysound"
			app:title="@string/preference_key_userkeysound_title"
			app:summary="@string/preference_key_userkeysound_summary"
			/>
		<net.gorry.android.input.nicownng.UserKeySoundImportDialog
			android:key="import_userkeysound"
			android:title="@string/preference_nicownng_import_userkeysound_title"
			android:summary="@string/preference_nicownng_import_userkeysound_summary"
			android:dialogMessage="@string/dialog_nicownng_import_userkeysound_message"
			android:positiveButtonText="@string/dialog_button_ok"
			android:negativeButtonText="@string/dialog_button_cancel"
			/>
		<CheckBoxPreference
			app:key="key_vibration"
			app:title="@string/preference_key_vibration_title"
			app:summary="@string/preference_key_vibration_summary"
			/>
		<CheckBoxPreference
			app:key="popup_preview"
			app:title="@string/preference_preview_title"
			app:summary="@string/preference_preview_summary"
			app:defaultValue="true"
			/>
		<net.gorry.android.input.nicownng.JAJP.KeyboardListPreferenceJAJP
			android:key="keyboard_skin"
			android:title="@string/preference_keyboard_skin_title"
			android:summary="@string/preference_keyboard_skin_summary"
			android:entries="@array/keyboard_skin"
			android:entryValues="@array/keyboard_skin_id"
			android:defaultValue="keyboard_android_default"
			/>
		<CheckBoxPreference
			app:key="fullscreen"
			app:title="@string/preference_nicownng_fullscreen"
			app:summary="@string/preference_nicownng_fullscreen_summary_ja"
			app:defaultValue="false"
			/>
		<Preference
			app:key="keycode_test"
			app:title="@string/preference_keycode_test_title"
			app:summary="@string/preference_keycode_test_summary"
			/>
	</PreferenceCategory>
	<PreferenceCategory
		app:title="@string/preference_conversion_menu"
		>
		<CheckBoxPreference
			app:key="opt_enable_learning"
			app:title="@string/preference_input_learning_title"
			app:summary="@string/preference_input_learning_summary"
			app:defaultValue="true"
			/>
		<ListPreference
			app:key="opt_prediction_mode2"
			app:title="@string/preference_prediction_mode2_title"
			app:summary="@string/preference_prediction_mode2_summary"
			app:entries="@array/prediction_mode2_entries"
			app:entryValues="@array/prediction_mode2_values"
			app:defaultValue="0"
			/>
		<CheckBoxPreference
			app:key="opt_prediction_afterenter"
			app:title="@string/preference_prediction_afterenter_title"
			app:summary="@string/preference_prediction_afterenter_summary"
			app:defaultValue="true"
			/>
		<CheckBoxPreference
			app:key="opt_spell_correction"
			app:title="@string/preference_correct_spell_title"
			app:summary="@string/preference_correct_spell_summary"
			app:defaultValue="true"
			/>
		<ListPreference
			app:key="emoji_type"
			app:title="@string/preference_emoji_type_title"
			app:summary="@string/preference_emoji_type_summary"
			app:entries="@array/emoji_type_entries"
			app:entryValues="@array/emoji_type_values"
			app:defaultValue="1"
			/>
	</PreferenceCategory>
	<PreferenceCategory
		app:title="@string/preference_dictionary_menu"
		>
		<PreferenceScreen
			app:key="user_dictionary_edit_words_ja"
			app:title="@string/preference_dictionary_menu_ja"
			app:summary="@string/preference_user_dictionary_edit_words_summary_ja"
			app:persistent="false"
			>
			<intent
				android:action="android.intent.action.MAIN"
				android:targetPackage="net.gorry.android.input.nicownng"
				android:targetClass="net.gorry.android.input.nicownng.JAJP.UserDictionaryToolsListJAJP"
				/>
		</PreferenceScreen>
		<PreferenceScreen
			app:key="user_dictionary_edit_words_en"
			app:title="@string/preference_dictionary_menu_en"
			app:summary="@string/preference_user_dictionary_edit_words_summary_en"
			app:persistent="false"
			>
			<intent
				android:action="android.intent.action.MAIN"
				android:targetPackage="net.gorry.android.input.nicownng"
				android:targetClass="net.gorry.android.input.nicownng.EN.UserDictionaryToolsListEN"
				/>
		</PreferenceScreen>
		<net.gorry.android.input.nicownng.JAJP.ClearLearnDictionaryDialogPreferenceJAJP
			android:key="clear_learn_dictionary"
			android:title="@string/preference_user_dictionary_clear_learning_title"
			android:summary="@string/preference_user_dictionary_clear_learning_summary"
			android:dialogMessage="@string/dialog_clear_learning_dictionary_message"
			android:positiveButtonText="@string/dialog_button_ok"
			android:negativeButtonText="@string/dialog_button_cancel"
			/>
	</PreferenceCategory>
	<PreferenceCategory
		app:title="@string/preference_config_menu"
		>
		<net.gorry.android.input.nicownng.ConfigBackupDialog
			android:key="backup_config"
			android:title="@string/preference_config_backup_title"
			android:summary="@string/preference_config_backup_summary"
			android:dialogMessage="@string/dialog_config_backup_message"
			android:positiveButtonText="@string/dialog_button_ok"
			android:negativeButtonText="@string/dialog_button_cancel"
			/>
		<net.gorry.android.input.nicownng.ConfigRestoreDialog
			android:key="restore_config"
			android:title="@string/preference_config_restore_title"
			android:summary="@string/preference_config_restore_summary"
			android:dialogMessage="@string/dialog_config_restore_message"
			android:positiveButtonText="@string/dialog_button_ok"
			android:negativeButtonText="@string/dialog_button_cancel"
			/>
		<PreferenceScreen
			app:key="edit_usersymbol"
			app:title="@string/preference_nicownng_edit_usersymbol_title"
			app:summary="@string/preference_nicownng_edit_usersymbol_summary"
			app:persistent="false"
			>
			<intent
				android:action="android.intent.action.MAIN"
				android:targetPackage="net.gorry.android.input.nicownng"
				android:targetClass="net.gorry.android.input.nicownng.UserSymbolEdit"
				/>
		</PreferenceScreen>
		<net.gorry.android.input.nicownng.UserSymbolExportDialog
			android:key="export_usersymbol"
			android:title="@string/preference_nicownng_export_usersymbol_title"
			android:summary="@string/preference_nicownng_export_usersymbol_summary"
			android:dialogMessage="@string/dialog_nicownng_export_usersymbol_message"
			android:positiveButtonText="@string/dialog_button_ok"
			android:negativeButtonText="@string/dialog_button_cancel"
			/>
		<net.gorry.android.input.nicownng.UserSymbolImportDialog
			android:key="import_usersymbol"
			android:title="@string/preference_nicownng_import_usersymbol_title"
			android:summary="@string/preference_nicownng_import_usersymbol_summary"
			android:dialogMessage="@string/dialog_nicownng_import_usersymbol_message"
			android:positiveButtonText="@string/dialog_button_ok"
			android:negativeButtonText="@string/dialog_button_cancel"
			/>
		<net.gorry.android.input.nicownng.UserSymbolInitializeDialog
			android:key="initialize_usersymbol"
			android:title="@string/preference_nicownng_initialize_usersymbol_title"
			android:summary="@string/preference_nicownng_initialize_usersymbol_summary"
			android:dialogMessage="@string/dialog_nicownng_initialize_usersymbol_message"
			android:positiveButtonText="@string/dialog_button_ok"
			android:negativeButtonText="@string/dialog_button_cancel"
			/>
	</PreferenceCategory>
	<PreferenceCategory
		app:title="@string/preference_aboutime_menu"
		>
		<Preference
			app:key="nicownng_help"
			style="?app:preferenceInformationStyle"
			app:title="@string/nicownng_help_title"
			app:summary="@string/nicownng_help_summary"
			/>
		<Preference
			app:key="nicownng_version"
			style="?app:preferenceInformationStyle"
			app:title="@string/nicownng_japanese"
			app:summary="@string/nicownng_japanese_copyright"
			/>
	</PreferenceCategory>
</PreferenceScreen>
