<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	>
	<ScrollView
		android:id="@+id/keycode_scrollview"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
	    >
	<TextView
		android:id="@+id/keycode_log"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/dialog_keycode_test_message"
		/>
	</ScrollView>
	<EditText
		android:id="@+id/keycode_text"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:singleLine="true"
		/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		>
			<Button
			android:id="@+id/dialog_button_clearlog"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:text="@string/dialog_button_clearlog"
			android:layout_weight="1"
			/>
			<Button
			android:id="@+id/dialog_button_copylog"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:text="@string/dialog_button_copylog"
			android:layout_weight="1"
			/>
			<Button
			android:id="@+id/dialog_button_close"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:text="@string/dialog_button_close"
			android:layout_weight="1"
			/>
				</LinearLayout>
</LinearLayout>
